@@ -20,11 +20,9 @@ package argonms.game.command;
 
 import argonms.common.UserPrivileges;
 import argonms.common.character.PlayerStatusEffect;
-import argonms.common.util.TimeTool;
 import argonms.game.GameRegistry;
 import argonms.game.GameServer;
 import argonms.game.character.GameCharacter;
-import argonms.game.character.MapMemoryVariable;
 import argonms.game.command.CommandDefinition.CommandAction;
 import argonms.game.field.GameMap;
 import argonms.game.field.MapEntity;
@@ -37,7 +35,6 @@ import argonms.game.loading.skill.SkillStats;
 import java.awt.Point;
 import java.text.DateFormat;
 import java.util.ArrayList;
-import java.util.Calendar;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.LinkedHashMap;
@@ -215,116 +212,7 @@ public class CommandProcessor {
 				target.mutate(Collections.singletonList(new CommandTarget.CharacterManipulation(CommandTarget.CharacterManipulationKey.CHANGE_MAP, new CommandTarget.MapValue(mapId, spawnPoint))));
 			}
 		}, "Warp a player to a specific map and spawn point", UserPrivileges.GM));
-		universalCommands.put("!jail", new CommandDefinition<CommandCaller>(new CommandAction<CommandCaller>() {
-			@Override
-			public String getUsage() {
-				return "Usage: !jail <target>";
-			}
-
-			@Override
-			public void doAction(CommandCaller caller, CommandArguments args, CommandOutput resp) {
-				String targetName = args.extractTarget(null, null);
-				if (targetName == null) {
-					resp.printErr(getUsage());
-					return;
-				}
-				CommandTarget target = args.getTargetByName(targetName, caller);
-				if (target == null) {
-					resp.printErr("The character " + targetName + " does not exist.");
-					resp.printErr(getUsage());
-					return;
-				}
-
-				target.mutate(Collections.singletonList(new CommandTarget.CharacterManipulation(CommandTarget.CharacterManipulationKey.CHANGE_MAP, new CommandTarget.MapValue(CommandTarget.MapValue.JAIL_MAP_ID))));
-			}
-		}, "Disclipline a player by sending them to a map they cannot leave from", UserPrivileges.GM));
-		universalCommands.put("!unjail", new CommandDefinition<CommandCaller>(new CommandAction<CommandCaller>() {
-			@Override
-			public String getUsage() {
-				return "Usage: !unjail <target>";
-			}
-
-			@Override
-			public void doAction(CommandCaller caller, CommandArguments args, CommandOutput resp) {
-				String targetName = args.extractTarget(null, null);
-				if (targetName == null) {
-					resp.printErr(getUsage());
-					return;
-				}
-				CommandTarget target = args.getTargetByName(targetName, caller);
-				if (target == null) {
-					resp.printErr("The character " + targetName + " does not exist.");
-					resp.printErr(getUsage());
-					return;
-				}
-
-				target.mutate(Collections.singletonList(new CommandTarget.CharacterManipulation(CommandTarget.CharacterManipulationKey.RETURN_TO_REMEMBERED_MAP, MapMemoryVariable.JAIL)));
-			}
-		}, "Allow a jailed player to resume playing where they were before being jailed", UserPrivileges.GM));
-		universalCommands.put("!ban", new CommandDefinition<CommandCaller>(new CommandAction<CommandCaller>() {
-			@Override
-			public String getUsage() {
-				return "Usage: !ban <target> [<expire date>|perm] <reason>";
-			}
-
-			@Override
-			public void doAction(CommandCaller caller, CommandArguments args, CommandOutput resp) {
-				String targetName = args.extractTarget(null, null);
-				if (targetName == null) {
-					resp.printErr(getUsage());
-					return;
-				}
-				CommandTarget target = args.getTargetByName(targetName, caller);
-				if (target == null) {
-					resp.printErr("The character " + targetName + " does not exist.");
-					resp.printErr(getUsage());
-					return;
-				}
-
-				long expireTimestamp;
-				if (!args.hasNext()) {
-					resp.printErr(getUsage());
-					return;
-				}
-				String param = args.next();
-				try {
-					int iDate = Integer.parseInt(param);
-					Calendar expireCal = TimeTool.intDateToCalendar(iDate);
-					if (expireCal == null) {
-						resp.printErr("Expire date must be in the form of YYYYMMDD.");
-						resp.printErr(getUsage());
-						return;
-					}
-
-					expireCal.set(Calendar.HOUR_OF_DAY, 0);
-					expireCal.set(Calendar.MINUTE, 0);
-					expireCal.set(Calendar.SECOND, 0);
-					expireCal.set(Calendar.MILLISECOND, 0);
-
-					if (expireCal.before(Calendar.getInstance())) {
-						resp.printErr("Expire date must not be in the past.");
-						resp.printErr(getUsage());
-						return;
-					}
-					expireTimestamp = expireCal.getTimeInMillis();
-				} catch (NumberFormatException e) {
-					if (!param.equalsIgnoreCase("perm")) {
-						resp.printErr("Expire date must be in the form of YYYYMMDD.");
-						resp.printErr(getUsage());
-						return;
-					}
-					expireTimestamp = TimeTool.NO_EXPIRATION;
-				}
-
-				if (!args.hasNext()) {
-					resp.printErr(getUsage());
-					return;
-				}
-				String reason = args.restOfString();
-
-				target.mutate(Collections.singletonList(new CommandTarget.CharacterManipulation(CommandTarget.CharacterManipulationKey.BAN, new CommandTarget.BanValue(caller.getName(), reason, expireTimestamp))));
-			}
-		}, "Raise a player's infraction level past the tolerance to ban them", UserPrivileges.GM));
+		universalCommands.putAll(new DisciplinaryCommandHandlers().getDefinitions());
 		universalCommands.put("!skill", new CommandDefinition<CommandCaller>(new CommandAction<CommandCaller>() {
 			@Override
 			public String getUsage() {
